@@ -1,2 +1,0 @@
-(** Create and show a simulation *)
-val main : string array -> unit
